--- a/showcase/manifest.json
+++ b/showcase/manifest.json
@@ -7,9 +7,9 @@
       "title": "Display of dungeon sys files"
     },
     {
-      "src": "showcase/media/Showcase of my zones module its able to trigeger events when entering or leaving a defined area.mkv",
+      "src": "showcase/media/Showcase of my zones module its able to triger events when entering or leaving a defined area.mkv",
       "type": "video",
-      "title": "Showcase of my zones module its able to trigeger events when entering or leaving a defined area"
+      "title": "Showcase of my zones module its able to triger events when entering or leaving a defined area"
     },
     {
       "src": "showcase/media/snippet of the code .png",
